--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -59,6 +59,13 @@
       <version>4.27.2</version>
     </dependency>
 
+    <!-- https://mariadb.com/resources/blog/how-to-connect-java-applications-to-mariadb-using-jdbc/ -->
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+      <version>LATEST</version>
+    </dependency>
+
 	</dependencies>
 
 	<build>
